--- a/src/pages/styles/turnos.css
+++ b/src/pages/styles/turnos.css
@@ -1,8 +1,11 @@
-.container {
-    width: 100%;
-    max-width: 1200px; 
-    margin: 0 auto;
-    padding: 20px;
+.container-turnos {
+    margin: 5px auto 0; 
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 50vh;
 }
 
 .centered-content {
@@ -22,4 +25,5 @@
         padding: 10px; 
     }
 }
+
 
